--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
       - name: Sync files to S3
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --delete --exclude ".github/*" --exclude ".idea/*" --exclude ".gitignore" --exclude ".git/*"
+          args: >-
+            --acl public-read --delete
+            --exclude ".github/*"
+            --exclude ".idea/*"
+            --exclude ".gitignore"
+            --exclude ".git/*"
         env:
           AWS_S3_BUCKET: po2workshop.com
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
