--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,14 @@ jobs:
     steps:
       - name: Debug file presence
         run: ls -la
+
       - name: Checkout repository
         uses: actions/checkout@v3
+
       - name: Sync files to S3 (without deleting existing ones)
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: >-
+          args: |
             --acl public-read
             --exclude ".github/*"
             --exclude ".idea/*"
