--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,26 +8,18 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Install AWS CLI (Correct Method)
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
-          aws --version  # Verify AWS CLI installation
-
-      - name: Sync files to S3 (without deleting existing ones)
-        run: |
-          aws s3 sync . s3://po2workshop.com \
-            --region us-east-1 \
-            --exclude ".git/*" \
-            --exclude ".github/*" \
-            --exclude ".idea/*" \
+      - name: Sync files to S3 (Preserve Existing Files)
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: >-
+            --acl public-read
+            --exclude ".github/*"
+            --exclude ".idea/*"
             --exclude ".gitignore"
+            --exclude ".git/*"
         env:
+          AWS_S3_BUCKET: po2workshop.com
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
