--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,20 +12,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Install AWS CLI (Official Method)
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+          aws --version  # Verify installation
+
       - name: Sync files to S3 (No Deletes, Proper Exclusions)
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: >-
-            --acl public-read
-            --exclude ".git/*"
-            --exclude ".github/*"
-            --exclude ".gitignore"
-            --exclude "*/.git/*"
-            --exclude "*/.github/*"
-            --exclude "*/.gitignore"
-            --exclude ".*"
+        run: |
+          aws s3 sync . s3://po2workshop.com \
+            --region us-east-1 \
+            --exclude ".git/*" \
+            --exclude ".github/*" \
+            --exclude ".gitignore" \
+            --exclude ".idea/*"
         env:
-          AWS_S3_BUCKET: po2workshop.com
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
