--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install AWS CLI (Official Method)
+      - name: Install AWS CLI
         run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
-          aws --version  # Verify installation
+          sudo apt update
+          sudo apt install -y awscli
+          aws --version  # Verify AWS CLI is installed
 
-      - name: Sync files to S3 (No Deletes, Proper Exclusions)
+      - name: Sync files to S3 (Exclude Unwanted Files)
         run: |
           aws s3 sync . s3://po2workshop.com \
             --region us-east-1 \
