--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install AWS CLI (Official AWS Method)
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
-          aws --version  # Verify AWS CLI is installed
+      - name: Verify AWS CLI (Check Preinstalled Version)
+        run: aws --version
 
       - name: Sync files to S3 (Exclude Unwanted Files)
         run: |
